# SHL_recommender

./: Dockerfile  README.md  api.py  app.py  engine2.py  modification.py  prep.py  pyproject.toml  scraper.py  shl_catalog_detailed.csv  shl_catalog_detailed_combined.csv  transformed_data.csv
faiss_index/: index.faiss  index.pkl
