[project]
name = "shl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "gcloud>=0.18.3",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.2",
    "langchain-huggingface>=0.1.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]
